CLIENT-275: fixed word-wrap for long balance amount

--- a/src/modules/wallet/modules/assets/directives/asset/asset.less
+++ b/src/modules/wallet/modules/assets/directives/asset/asset.less
@@ -39,7 +39,7 @@ w-asset {
   .balance {
     margin: 6px 0 auto 0;
 
-    > span {
+    w-balance > span {
       word-wrap: break-word;
     }
 
